chat-broadcaster/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-broadcaster-service
  namespace: chat-app
spec:
  selector:
    app: chat-broadcaster
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
