chat-broadcaster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-broadcaster-ingress
  namespace: chat-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: git.chat.broadcaster.sesaque.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: chat-broadcaster-service
                port:
                  number: 80
  tls:
    - hosts:
      - git.chat.broadcaster.sesaque.com
      secretName: chat-broadcaster-letsencrypt-secret
